--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-fastapi
-uvicorn[standard]
-pydantic
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.3.0
+google-api-python-client==2.140.0
+google-auth==2.34.0
+python-multipart==0.0.9
+
 
